--- a/app/portfolio_case.html
+++ b/app/portfolio_case.html
@@ -130,11 +130,17 @@
 				</div>
 				<!-- firm information -->
 				<div class="header__firm-info-list firm-info-list flex">
-					<a class="firm-info firm-info--mail" href="mailto:info@cweb.by">
+					<a class="firm-info firm-info--mail" data-copy="info@cweb.by">
 						<svg class="firm-info__ic" width="16" height="12">
 							<use href="./assets/img/headerAndFooter/sprite.svg#mail-ic"></use>
 						</svg>
 						info@cweb.by
+						<svg class="firm-info__ic" width="16" height="16" viewBox="0 0 1000 1000">
+							<g>
+								<path
+									d="M886.8,10H267.9c-56.7,0-103.2,46.4-103.2,103.2v51.6h-51.6C56.4,164.7,10,211.2,10,267.9v618.9C10,943.6,56.4,990,113.2,990h618.9c56.7,0,103.2-46.4,103.2-103.2v-51.6h51.6c56.7,0,103.2-46.4,103.2-103.2V113.2C990,56.4,943.6,10,886.8,10z M783.7,886.8c0,30.9-20.6,51.6-51.6,51.6H113.2c-30.9,0-51.6-20.6-51.6-51.6V267.9c0-30.9,20.6-51.6,51.6-51.6h618.9c30.9,0,51.6,20.6,51.6,51.6V886.8z M938.4,732.1c0,30.9-20.6,51.6-51.6,51.6h-51.6V267.9c0-56.7-46.4-103.2-103.2-103.2H216.3v-51.6c0-30.9,20.6-51.6,51.6-51.6h618.9c30.9,0,51.6,20.6,51.6,51.6V732.1z" />
+							</g>
+						</svg>
 					</a>
 					<a class="firm-info firm-info--clock">
 						<svg class="firm-info__ic" width="16" height="16">
@@ -359,178 +365,104 @@
 		<!-- CONTENT WRAP -->
 		<div class="content-wrap">
 			
-	<main>
-		<h1 class="title-1 container">Кейс по трагетированной рекламе
-			composit.by</h1>
-		<!-- example task -->
-		<section class="example-task-b section">
-			<div class="example-task-b__container container">
-				<div class="row">
-					<div class="col-6 col-md-7 col-sm-12">
-						<div class="example-task-b__col example-task-b__col--info">
-							<div class="example-task-b__expenses">
-								<p><b>Тематика:</b> <span class="fw-400">продажа и строительство композитных
-										бассейнов</span>
-								</p>
-								<p><b>Аккаунт клиента:</b>
-									<a href="http://composit_group.by/" target="_blank">composit_group.by</a>
-								</p>
-								<p>
-									<b>Период работ:</b>
-									2020 - по настояещее время
-								</p>
-								<p class="vt-center"><b>Бюджет:</b>
-									<span class="example-task-b__coins">
-										<span class="example-task-b__coin"></span>
-										<span class="example-task-b__coin"></span>
-										<span class="example-task-b__coin"></span>
-									</span>
-								</p>
-							</div>
-							<div class="example-task-b__card">
-								<h4>Цели и задачи</h4>
-								<h3>
-									Основной задачей являлось повышение узнаваемости бренда, а также
-									увеличение продаж засчет таргета.
-								</h3>
-								<p>
-									Начать работы было принято с общего оформления BIO, вечных сторис и контент
-									планов.
-								</p>
-								<p>
-									В качестве рекламных креативов используются только авторские фото
-									и тут еще над текстом самим подкмать
-								</p>
-							</div>
-						</div>
-					</div>
 
-					<div class="col-6 col-md-5 col-sm-12">
-						<div class="example-task-b__col example-task-b__col--creators flex-col">
-							<div class="example-task-b__review-card review-slide">
-								<div class="review-slide__imgBox"
-									style="background-image: url(./assets/img/components/reviews-slider/composit-bg.jpg);">
-									<a class="btn btn--secondary"
-										href="./assets/img/components/reviews-slider/composit-rev.webp"
-										data-fslightbox="composit">
-										Оригинал отзыва
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
+<main>
+	<div class="container">
+		<h1 class="title-1 mb-52 mb-lg-32 mb-sm-20 fz-lg-24 fz-sm-16 text-transform-none container"
+			style="font-size: 32px">
+			Разработка интернет-магазина с уникальным дизайном aquilaria
+		</h1>
+
+		<!-- nav panel -->
+		<div class="nav-panel">
+			<div class="nav-panel__container container">
+				<div class="nav-panel__inner">
+					<a class="nav-panel__link" href="#prod">Поисковое продвижение</a>
+					<a class="nav-panel__link" href="#context">Контекстная реклама</a>
+					<a class="nav-panel__link" href="#advantage">Что дал комплекс?</a>
 				</div>
-			</div>
-		</section>
-		<!-- project description -->
-		<div class="project-desc-b section">
-			<div class="project-desc-b__container container">
-				<h2 class="title-1 section__title title--type-2">
-					<span>Оформление</span> аккаунта и ленты заказчика
-				</h2>
-				<a class="project-desc-b__img" href="#" target="_blank">
-					<img src="./assets/img/components/project-desc-b/composit.jpg" alt="sdke.by">
-				</a>
 			</div>
 		</div>
-		<!-- metrics -->
-		<section class="metrics-b section">
-			<div class="metrics-b__container container">
-				<h2 class="title-1 section__title title--type-2">
-					<span>Результаты</span> за период работы
-				</h2>
-				<div class="b-row">
-					<div class="col-6 col-sm-12">
-						<div class="metrics-b__item flex-col">
-							<a href="./assets/img/components/metrics-b/composit-target.jpg"
-								data-fslightbox="metric">
-								<img src="./assets/img/components/metrics-b/composit-target.jpg" alt="">
-							</a>
-						</div>
-					</div>
-					<div class="col-6 col-sm-12">
-						<div class="metrics-b__item flex-col">
-							<a href="./assets/img/components/metrics-b/composit-target-2.jpg"
-								data-fslightbox="metric">
-								<img src="./assets/img/components/metrics-b/composit-target-2.jpg" alt="">
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- application block -->
-		<section class="application-b">
-			<div class="container">
-				<h2 class="title-1 section__title title--type-2">
-					<span>Приступить</span> к работе
-				</h2>
-			</div>
-			<div class="application-b__container container flex">
-				<div class="application-b__left">
-					<form action="#" class="application-form">
-						<div class="b-input">
-							<div class="b-input__input">
-								<input type="text" name="username" placeholder=" ">
-								<div class="b-input__placeholder">Имя <span>*</span></div>
-								<div class="b-input__ic">
-									<svg>
-										<use href="./assets/img/icons/sprite.svg#input-user-ic"></use>
-									</svg>
-								</div>
-							</div>
-						</div>
-						<div class="b-input">
-							<div class="b-input__input">
-								<input type="tel" name="tel" placeholder=" ">
-								<div class="b-input__placeholder">Телефон <span>*</span></div>
-								<div class="b-input__ic">
-									<svg>
-										<use href="./assets/img/icons/sprite.svg#input-tel-ic"></use>
-									</svg>
-								</div>
-							</div>
-						</div>
-						<div class="b-input">
-							<div class="b-input__input">
-								<input type="url" name="url-site" placeholder=" ">
-								<div class="b-input__placeholder">Сайт <span
-										style="color: #A9ABAE;">(необязательно)</span></div>
-								<div class="b-input__ic">
-									<svg>
-										<use href="./assets/img/icons/sprite.svg#input-build-ic"></use>
-									</svg>
-								</div>
-							</div>
-						</div>
-						<div class="b-input">
-							<div class="b-input__input">
-								<input type="text" name="message" placeholder=" ">
-								<div class="b-input__placeholder">Сообщение</div>
-							</div>
-						</div>
 
-						<button class="btn" type="submit" aria-label="Отправить">Отправить</button>
-					</form>
-				</div>
-				<div class="application-b__right">
-					<div class="applacation-b__img">
-						<img src="./assets/img/components/b-application/application-b-bg.jpg" alt="">
-					</div>
-					<div class="application-b__overlay flex-col">
-						<!-- logo -->
-						<a class="logo" href="#">
-							<img class="logo__ic" src="assets/img/logo-ic.png" alt="логотип">
-							<span class="logo__text">CWEB</span>
+		<section id="prod" class="section pt-52 pt-sm-28">
+			<h2 class="section__title title-1">Поисковое продвижение</h2>
+			<div class="row-cols-6 justify-content-center ais gy-20">
+				<!-- img -->
+				<div class="order-md-2 d-flex">
+					<div class="pos-relative d-inline-flex jcc bg-pseudoel-blue-alpha mx-auto">
+						<a class="zoom-photo" href="assets/img/test/structura.jpg" data-fslightbox="struktura">
+							<span class="zoom-photo__text">Увеличить</span>
+							<svg class="zoom-photo__icon" width="16" height="16" viewBox="0 0 16 16">
+								<path d="M15.4888 14.5735L11.6808 10.6129C12.6599 9.44901 13.1964 7.98455 13.1964 6.45999C13.1964 2.89801 10.2983 0 6.73636 0C3.17438 0 0.276367 2.89801 0.276367 6.45999C0.276367 10.022 3.17438 12.92 6.73636 12.92C8.07358 12.92 9.34788 12.5167 10.4374 11.751L14.2743 15.7416C14.4347 15.9082 14.6504 16 14.8816 16C15.1004 16 15.3079 15.9166 15.4655 15.7649C15.8003 15.4428 15.811 14.9085 15.4888 14.5735ZM6.73636 1.68522C9.36923 1.68522 11.5111 3.82713 11.5111 6.45999C11.5111 9.09286 9.36923 11.2348 6.73636 11.2348C4.10349 11.2348 1.96158 9.09286 1.96158 6.45999C1.96158 3.82713 4.10349 1.68522 6.73636 1.68522Z"></path>
+							</svg>
 						</a>
-						<p>
-							обещаем только то, что можем выполнить!
-						</p>
+						<img src="assets/img/test/structura.jpg" alt="">
+					</div>
+				</div>
+				<!-- text -->
+				<div class="content text fz-18 fz-sm-14">
+					<p>
+						Далее SEO-специалист приступил к составлению проектной документации. В ходе работ мы собрали семантическое ядро, спроектировали структуру каталога, а также согласовали прототипы страниц.
+					</p>
+					<p>
+						Далее SEO-специалист приступил к составлению проектной документации. В ходе работ мы собрали семантическое ядро, спроектировали структуру каталога, а также согласовали прототипы страниц.
+					</p>
+					<p>
+						Далее SEO-специалист приступил к составлению проектной документации.
+					</p>
+					<p><a href="#">Читайте подробнее в кейсе по seo</a></p>
+				</div>
+			</div>
+		</section>
+
+		<section id="context" class="section">
+			<h2 class="section__title title-1">Поисковое продвижение</h2>
+			<div class="row-cols-6 justify-content-center ais gy-20">
+				<!-- text -->
+				<div class="content text fz-18 fz-sm-14">
+					<p>
+						Далее SEO-специалист приступил к составлению проектной документации. В ходе работ мы собрали семантическое ядро, спроектировали структуру каталога, а также согласовали прототипы страниц.
+					</p>
+					<p>
+						Далее SEO-специалист приступил к составлению проектной документации. В ходе работ мы собрали семантическое ядро, спроектировали структуру каталога, а также согласовали прототипы страниц.
+					</p>
+					<p>
+						Далее SEO-специалист приступил к составлению проектной документации.
+					</p>
+					<p><a href="#">Читайте подробнее в кейсе по seo</a></p>
+				</div>
+				<!-- img -->
+				<div class="d-flex">
+					<div class="pos-relative d-inline-flex jcc mx-auto">
+						<img src="assets/img/test/structura.jpg" alt="">
 					</div>
 				</div>
 			</div>
 		</section>
-	</main>
+
+		<section id="advantage" class="section">
+			<h2 class="section__title title-1">Что дал комплекс?</h2>
+			<div class="text content">
+				<p>
+					Далее SEO-специалист приступил к составлению проектной документации. В ходе работ мы собрали семантическое ядро, спроектировали структуру каталога, а также согласовали прототипы страниц.
+				</p>
+			</div>
+			<div class="mt-4e row-cols-6 row-cols-md-12">
+				<fragment>
+					<a href="assets/img/other/target-insta-banner.jpg" data-fslightbox="image">
+						<img class="response-img" src="assets/img/other/target-insta-banner.jpg" alt="">
+					</a>
+				</fragment>
+				<fragment>
+					<a href="assets/img/other/target-insta-banner.jpg" data-fslightbox="image">
+						<img class="response-img" src="assets/img/other/target-insta-banner.jpg" alt="">
+					</a>
+				</fragment>
+			</div>
+		</section>
+	</div>
+
+</main>
 		</div>
 		
 				<!-- FOOTER -->
@@ -562,12 +494,18 @@
 			<div class="footer__middle-col">
 				<!-- info firm -->
 				<div class="footer__firm-info-list firm-info-list flex-col">
-					<a class="firm-info firm-info--mail" href="mailto:info@cweb.by">
+					<div class="firm-info firm-info--mail" data-copy="info@cweb.by">
 						<svg class="firm-info__ic" width="16" height="12">
 							<use href="./assets/img/headerAndFooter/sprite.svg#mail-ic"></use>
 						</svg>
 						info@cweb.by
-					</a>
+						<svg class="firm-info__ic" width="16" height="16" viewBox="0 0 1000 1000">
+							<g>
+								<path
+									d="M886.8,10H267.9c-56.7,0-103.2,46.4-103.2,103.2v51.6h-51.6C56.4,164.7,10,211.2,10,267.9v618.9C10,943.6,56.4,990,113.2,990h618.9c56.7,0,103.2-46.4,103.2-103.2v-51.6h51.6c56.7,0,103.2-46.4,103.2-103.2V113.2C990,56.4,943.6,10,886.8,10z M783.7,886.8c0,30.9-20.6,51.6-51.6,51.6H113.2c-30.9,0-51.6-20.6-51.6-51.6V267.9c0-30.9,20.6-51.6,51.6-51.6h618.9c30.9,0,51.6,20.6,51.6,51.6V886.8z M938.4,732.1c0,30.9-20.6,51.6-51.6,51.6h-51.6V267.9c0-56.7-46.4-103.2-103.2-103.2H216.3v-51.6c0-30.9,20.6-51.6,51.6-51.6h618.9c30.9,0,51.6,20.6,51.6,51.6V732.1z" />
+							</g>
+						</svg>
+					</div>
 					<a class="firm-info firm-info--clock">
 						<svg class="firm-info__ic" width="16" height="16">
 							<use href="./assets/img/headerAndFooter/sprite.svg#clock-ic"></use>
