--- a/app/portfolio_seo.html
+++ b/app/portfolio_seo.html
@@ -419,6 +419,16 @@
 				</div>
 			</div>
 		</div>
+		<div class="container">
+			<figure>
+				<a href="doc/images/portfolio/electroopic/des.png" data-fslightbox="img_1">
+					<img src="doc/images/portfolio/electroopic/des.png" alt="">
+				</a>
+				<figcaption>
+					Результаты гугла
+				</figcaption>
+			</figure>
+		</div>
 		<div id="op" class="section pt-52 pt-sm-28">
 			<div class="container container--sm">
 				<div class="row-cols-6 row-cols-md-12">
